<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@mipmap/film3layer_es" >

    <View
        android:id="@+id/view_center"
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:layout_centerInParent="true" />

    <RelativeLayout
        android:id="@+id/movies_premiere_relativeLayout"
        android:layout_width="232dp"
        android:layout_height="112dp"
        android:layout_marginTop="140dp"
        android:layout_centerHorizontal="true"
        android:background="@mipmap/movies_05" >

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:scaleType="fitXY"
            android:src="@drawable/home_selector" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_margin="3dp"
            android:text="@string/music_text"
            android:textColor="@android:color/white"
            android:visibility="invisible" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/movies_action_relativeLayout"
        android:layout_width="112dp"
        android:layout_height="112dp"
        android:layout_marginTop="140dp"
        android:layout_marginRight="8dp"
        android:layout_toLeftOf="@id/movies_premiere_relativeLayout"
        android:background="@mipmap/movies_03" >

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:scaleType="fitXY"
            android:src="@drawable/home_selector" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_margin="3dp"
            android:text="@string/movie_text"
            android:textColor="@android:color/white"
            android:visibility="invisible" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/movies_comedy_relativeLayout"
        android:layout_width="112dp"
        android:layout_height="112dp"
        android:layout_marginTop="140dp"
        android:layout_marginLeft="8dp"
        android:layout_toRightOf="@id/movies_premiere_relativeLayout"
        android:background="@mipmap/movies_07" >

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:scaleType="fitXY"
            android:src="@drawable/home_selector" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_margin="3dp"
            android:text="@string/game_text"
            android:visibility="invisible"
            android:textColor="@android:color/white" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/movies_drama_relativeLayout"
        android:layout_width="112dp"
        android:layout_height="112dp"
        android:layout_below="@id/movies_premiere_relativeLayout"
        android:layout_marginRight="4dp"
        android:layout_marginTop="8dp"
        android:layout_toLeftOf="@id/view_center"
        android:background="@mipmap/movies_13" >

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:scaleType="fitXY"
            android:src="@drawable/home_selector" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_margin="3dp"
            android:text="@string/about_us_text"
            android:textColor="@android:color/white"
            android:visibility="invisible" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/movies_children_relativeLayout"
        android:layout_width="112dp"
        android:layout_height="112dp"
        android:layout_below="@id/movies_premiere_relativeLayout"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="8dp"
        android:layout_toRightOf="@id/view_center"
        android:background="@mipmap/movies_15" >

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:scaleType="fitXY"
            android:src="@drawable/home_selector" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_margin="3dp"
            android:text="@string/about_us_text"
            android:textColor="@android:color/white"
            android:visibility="invisible" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/movies_lslamic_relativeLayout"
        android:layout_width="112dp"
        android:layout_height="112dp"
        android:layout_below="@id/movies_premiere_relativeLayout"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:layout_toLeftOf="@id/movies_drama_relativeLayout"
        android:background="@mipmap/movies_12" >

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:scaleType="fitXY"
            android:src="@drawable/home_selector" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_margin="3dp"
            android:text="@string/about_us_text"
            android:textColor="@android:color/white"
            android:visibility="invisible" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/movies_songs_relativeLayout"
        android:layout_width="112dp"
        android:layout_height="112dp"
        android:layout_below="@id/movies_premiere_relativeLayout"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_toRightOf="@id/movies_children_relativeLayout"
        android:background="@mipmap/movies_16" >

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:scaleType="fitXY"
            android:src="@drawable/home_selector" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_margin="3dp"
            android:text="@string/about_us_text"
            android:textColor="@android:color/white"
            android:visibility="invisible" />
    </RelativeLayout>

</RelativeLayout>