<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/music_bg">
    
    <LinearLayout 
        android:id="@+id/llPlayBlock"
        android:layout_marginTop="10dip"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:gravity="center"
	    android:orientation="horizontal" >
	
	    <LinearLayout
	        android:id="@+id/music_left"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_vertical"
	        android:background="@mipmap/list_bg"
	        android:orientation="vertical"
	        android:paddingLeft="20dp"
	        android:paddingRight="20dp" >
	        
	        <TextView
	            android:id="@+id/music_left_textview_top"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="left"
	            android:gravity="center_vertical"/>
	        

	        <TextView
	            android:id="@+id/music_left_textview"
	            android:drawableLeft="@mipmap/list_icon"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="left"
	            android:gravity="center_vertical"
	            android:text="@string/music_list"
	            android:textColor="#FFFFFF"
	            android:textSize="20sp" />

	        <ListView
	            android:id="@+id/lvMusicList"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:divider="@mipmap/line" />
	    </LinearLayout>
	
	    <LinearLayout
	        android:id="@+id/music_right"
	        android:orientation="vertical"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:paddingTop="20dip"
	        android:paddingLeft="20dp"
	        android:paddingRight="20dp"
	        android:background="@mipmap/oper_bg">
	        
	        
	        <TextView android:id="@+id/tvCurrentPlay"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:ellipsize="marquee"
	            android:focusable="true"
	            android:focusableInTouchMode="true"
	            android:gravity="center"
	            android:marqueeRepeatLimit="marquee_forever"
	            android:maxWidth="260dip"
	            android:singleLine="true"
	            android:layout_gravity="center"
	            android:textSize="20sp"
	            android:textColor="#FFFFFF"
	            android:text="@null"/>
	        
	        <FrameLayout android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_horizontal"
	            android:layout_marginTop="10dip"
	            android:background="@mipmap/cd_bg">
	            
	            <ImageView android:id="@+id/ivCdIcon"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:src="@mipmap/cd_icon"
	                android:layout_gravity="center"
	                android:scaleType="fitXY"
	                android:contentDescription="@null"/>
	        </FrameLayout>
	        
	        <LinearLayout android:orientation="horizontal"
	            android:layout_width="wrap_content"
	            android:layout_marginTop="40dip"
	            android:layout_gravity="center_horizontal"
	            android:layout_height="wrap_content">
	            
	           <ImageView android:id="@+id/ivModeOrder"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:scaleType="fitXY"
	                android:layout_marginRight="12dip"
	                android:contentDescription="@null"
	                android:src="@mipmap/mode_order_sel"/>
	            
	            
	            <ImageView android:id="@+id/ivModeSingle"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:scaleType="fitXY"
	                android:layout_marginRight="15dip"
	                android:contentDescription="@null"
	                android:src="@mipmap/mode_single_nor"/>
	            
	            <ImageView android:id="@+id/ivModeRandom"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:scaleType="fitXY"
	                android:layout_marginLeft="15dip"
	                android:layout_marginRight="15dip"
	                android:contentDescription="@null"
	                android:src="@mipmap/mode_random_nor"/>
	            
	            <ImageView
	                android:id="@+id/volume_icon" 
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:scaleType="fitXY"
	                android:contentDescription="@null"
	                android:src="@mipmap/volume_icon"/>
	            
	            <ImageView android:id="@+id/ivVolumeOper"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginLeft="-12dip"
	                android:scaleType="fitXY"
	                android:contentDescription="@null"
	                android:src="@mipmap/volume_level_04"/>
	        </LinearLayout>
	        
	        <LinearLayout android:orientation="horizontal"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="50dip"
	            android:gravity="center_horizontal">
	            
	            <TextView android:id="@+id/tvCurrentTime"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:textColor="#FFFFFF"
	                android:textSize="18sp"	   
	                android:layout_gravity="center"             
	                android:paddingLeft="5dip"
	                android:text="@string/default_time"/>
	            
	            <SeekBar android:id="@+id/sbProgress"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:max="100"
	                android:layout_gravity="center"
	                android:paddingLeft="5dip"
	                android:paddingRight="5dip"
	                android:maxHeight="45dip"
	                android:thumbOffset="5dip"
	                android:progressDrawable="@drawable/progress_seekbar"
	                android:thumb="@mipmap/seek_thumb"/>
	            
	            <TextView android:id="@+id/tvTotalTime"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:textColor="#FFFFFF"
	                android:textSize="18sp"
	                android:layout_gravity="center"
	                android:text="@string/default_time"/>
	            
	        </LinearLayout>
	        
	        <LinearLayout android:orientation="horizontal"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="40dip"
	            android:gravity="center">
	            
	            <ImageView android:id="@+id/ivPrevious"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:scaleType="fitXY"
	                android:layout_marginRight="10dip"
	                android:contentDescription="@null"
	                android:src="@drawable/previous_selector"/>
	            
	            <ImageView android:id="@+id/ivPlayPause"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:scaleType="fitXY"
	                android:layout_marginLeft="10dip"
	                android:layout_marginRight="10dip"
	                android:contentDescription="@null"
	                android:src="@drawable/play_selector"/>
	            
	            <ImageView android:id="@+id/ivNext"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:scaleType="fitXY"
	                android:layout_marginLeft="10dip"
	                android:contentDescription="@null"
	                android:src="@drawable/next_selector"/>
	        </LinearLayout>
	    </LinearLayout>
	
	</LinearLayout>
    
    <LinearLayout 
        android:id="@+id/llNoFile"
        android:visibility="invisible"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="129dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@drawable/no_file_selector">
        
        <TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:textSize="28sp"
		    android:textColor="#FFFFFF"
		    android:shadowColor="#000000"
		    android:shadowDx="1.0"
		    android:shadowDy="1.0"
		    android:shadowRadius="1.5"
		    android:text="@string/no_file"/>
        
        <TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="5dip"
		    android:textSize="28sp"
		    android:textColor="#00AA00"
		    android:shadowColor="#000000"
		    android:shadowDx="1.0"
		    android:shadowDy="1.0"
		    android:shadowRadius="1.5"
		    android:text="@string/retry"/>
    </LinearLayout>
    
    <RelativeLayout 
        android:id="@+id/rlLoadingDialog"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000">
        
        <TextView android:textSize="24sp"
            android:textColor="#FFFFFF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/loading"
            />
    </RelativeLayout>
</FrameLayout>


